@@ -1,0 +1,27 @@
+[
+    {
+        "name" : "NOAA 15",
+        "frequency" : 137620000,
+        "modulation" : "noaa-apt-15"
+    },
+    {
+        "name" : "NOAA 18",
+        "frequency" : 137912500,
+        "modulation" : "noaa-apt-18"
+    },
+    {
+        "name" : "NOAA 19",
+        "frequency" : 137100000,
+        "modulation" : "noaa-apt-19"
+    },
+    {
+        "name" : "Meteor M2-3",
+        "frequency" : 137900000,
+        "modulation" : "meteor-lrpt"
+    },
+    {
+        "name" : "Meteor M2-4",
+        "frequency" : 137100000,
+        "modulation" : "meteor-lrpt"
+    }
+]
