@@ -487,3 +487,12 @@ RHA23|||71550|NFM
 RHA24|||71575|NFM
 RHA25|||71600|NFM
 RHA26|||72325|NFM
+
+#
+# Satellities
+#
+NOAA 15|||137620|NOAA-APT-15
+NOAA 18|||137912.5|NOAA-APT-18
+NOAA 19|||137100|NOAA-APT-19
+Meteor M2-3|||137900|METEOR-LRPT
+Meteor M2-4|||137100|METEOR-LRPT
