@@ -270,26 +270,46 @@ class Modes(object):
             secondaryFft=False
         ),
 # Work in progress
-#        DigitalMode(
-#            "noaa-apt",
-#            "NOAA APT",
-#            underlying=["empty"],
-#            bandpass=Bandpass(-25000, 25000),
-#            requirements=["wxsat"],
-#            service=True,
-#            squelch=False,
-#            secondaryFft=False
-#        ),
-#        DigitalMode(
-#            "meteor-lrpt",
-#            "Meteor-M2 LRPT",
-#            underlying=["empty"],
-#            bandpass=Bandpass(-75000, 75000),
-#            requirements=["wxsat"],
-#            service=True,
-#            squelch=False,
-#            secondaryFft=False
-#        ),
+        DigitalMode(
+            "noaa-apt-15",
+            "NOAA-15 APT",
+            underlying=["empty"],
+            bandpass=Bandpass(-25000, 25000),
+            requirements=["wxsat"],
+            service=True,
+            squelch=False,
+            secondaryFft=False
+        ),
+        DigitalMode(
+            "noaa-apt-18",
+            "NOAA-18 APT",
+            underlying=["empty"],
+            bandpass=Bandpass(-25000, 25000),
+            requirements=["wxsat"],
+            service=True,
+            squelch=False,
+            secondaryFft=False
+        ),
+        DigitalMode(
+            "noaa-apt-19",
+            "NOAA-19 APT",
+            underlying=["empty"],
+            bandpass=Bandpass(-25000, 25000),
+            requirements=["wxsat"],
+            service=True,
+            squelch=False,
+            secondaryFft=False
+        ),
+        DigitalMode(
+            "meteor-lrpt",
+            "Meteor-M2 LRPT",
+            underlying=["empty"],
+            bandpass=Bandpass(-75000, 75000),
+            requirements=["wxsat"],
+            service=True,
+            squelch=False,
+            secondaryFft=False
+        ),
     ]
 
     @staticmethod
